# cpp_robot

./: .gitignore  CMakeLists.txt  README.md  cmake  include  main.cpp  valgrind_run.sh
cmake_modules/: common.cmake  set_ros.cmake  set_rpath.cmake  super_build.cmake
demo/: CMakeLists.txt  README.md  bridge_channel_config.toml  bridge_dds_config.toml  bridge_dds_config.xml  bridge_ros_config.toml  dds_config.xml  dds_ros_bridge.cpp  gui_config.toml  pallet_detector.cpp
demo/config/: bridge_config.hpp  bridge_config_gen.hpp
fastdds/: CMakeLists.txt  README.md
fastdds/impl/: CMakeLists.txt  dds_builder_pub_test.cpp  dds_builder_sub_test.cpp  dds_config.toml  dds_config_back.toml  dds_config_demo.xml  dds_config_send.toml  dds_handler.cpp  dds_handler.h  dds_handler.hpp  dds_handler_demo.h  dds_handler_variant.cpp  dds_handler_variant.h  dds_handler_variant.hpp  dds_helper.cpp  dds_helper.h  dds_helper_test.c  dds_message_convert.cpp  dds_message_convert.h  dds_message_convert.hpp  dds_simple_participant.cpp
fastdds/impl/config/: dds_builder_config.hpp  dds_builder_config_gen.hpp
fastdds/message/: Message.cxx  Message.h  Message.idl  MessageCdrAux.hpp  MessageCdrAux.ipp  MessagePubSubTypes.cxx  MessagePubSubTypes.h
include/: README.md
include/common/: c_style.h  clock_time.h  signals.h  suspend.h  task.h
include/ghc/: README.md  fs.hpp
include/math/: geometry.h  math_basic.h
include/math/geometry/: normal_estimation_2d.h  normal_estimation_3d.h  point_vector3.h
include/math/transform/: README.md  eigen_transform.h
include/tinyalloc/: .gitignore  Makefile  malloc_test.cpp  stress_test.c  test.c  tinyalloc.c  tinyalloc.h
message_center/: CMakeLists.txt  memory_pool_handler.h  memory_pool_handler.hpp  message_center_handler.h  message_center_types.c  message_center_types.h
perception/: CMakeLists.txt  README.md  optimlib_test.cpp  pallet_detector.cpp  pointcloud_pallet_detect.cpp  pointcloud_pallet_detect.h  pointcloud_pallet_detect_impl.cpp  pointcloud_pallet_detect_impl.h  pointcloud_process.cpp  pointcloud_process.h  pointcloud_process_test.c
perception/config/: pallet_detect_config.hpp  pallet_detect_config_gen.hpp
ros1/: CMakeLists.txt  README.md
ros1/api/: CMakeLists.txt  README.md
ros1/api/src/: comm_config.toml  comm_config_test.toml  ros_helper.cpp  ros_helper.h  ros_helper_impl.cpp  ros_helper_impl.h  ros_helper_impl.hpp  ros_helper_option.h  ros_helper_option.hpp  ros_helper_test.c  ros_helper_topic.cpp  ros_helper_topic.h  ros_helper_topic.hpp
ros1/api/src/config/: ros_helper_config.hpp  ros_helper_config_gen.hpp
ros1/libros/include/sensor_msgs/: BatteryState.h  CameraInfo.h  ChannelFloat32.h  CompressedImage.h  FluidPressure.h  Illuminance.h  Image.h  Imu.h  JointState.h  Joy.h  JoyFeedback.h  JoyFeedbackArray.h  LaserEcho.h  LaserScan.h  MagneticField.h  MultiDOFJointState.h  MultiEchoLaserScan.h  PointCloud.h  PointCloud2.h  Range.h  RegionOfInterest.h  RelativeHumidity.h  SetCameraInfoRequest.h  SetCameraInfoResponse.h  Temperature.h  TimeReference.h
ros1/libros/ros_comm-noetic-devel/clients/roscpp/include/ros/: common.h
ros1/libros/ros_comm-noetic-devel/clients/roscpp/src/libros/: config.h
ros1/libros/ros_comm-noetic-devel/test/test_roslib_comm/msg/: FillEmbedTime.msg  FillSimple.msg  HeaderTest.msg
tcc/: CMakeLists.txt  READEME.md  tcc_builder.c  tcc_builder.h  tcc_script.c  tcc_test.c  tcc_test.cpp
